Fix: Filter alignment on mobile

--- a/app/assets/stylesheets/polaris_overrides.css
+++ b/app/assets/stylesheets/polaris_overrides.css
@@ -24,7 +24,7 @@
     grid-template-columns: repeat(1, minmax(0, 1fr))
   }
 
-  .Polaris-LegacyStack.filter-stack {
-    margin-left: 0;
+  .filter-margin {
+    margin-left: var(--p-space-4);
   }
 }
